CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/..)
PROJECT( HandTracker)
FIND_PACKAGE( OpenCV REQUIRED )

SET(SRC
    Main.cpp
    ProcessImage.cpp
    Gui.cpp
    )

ADD_EXECUTABLE( ${PROJECT_NAME} ${SRC} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${OpenCV_LIBS} )


